# AEngine-CPP

./: .gitignore  .gitmodules  AE_OGL_API.md  AEngine.sln  AEngine.sln.DotSettings  CMakeLists.txt  CMakeSettings.json  CodeStyle.md  FormatDefoults.DotSettings  README.md  RenderFlowGraph.md  TODO.md  cmake.bat  cpp.hint  premake5.lua
AEngine/: AEngine.vcxproj  AEngine.vcxproj.filters
AEngine/src/: AEngine.h  aepch.h
AEngine/src/AEngine/: Application.cpp  Application.h  Core.h  EntryPoint.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Window.h
AEngine/src/AEngine/EventHandling/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
AEngine/src/AEngine/Math/: Math.cpp  Math.h
AEngine/src/AEngine/components/: Camera.cpp  Camera.h  SceneComponent.cpp  SceneComponent.h
AEngine/src/AEngine/core/: Core.h  CoreEngine.cpp  CoreEngine.h  Time.cpp  Time.h
AEngine/src/AEngine/input/: GLFWMouseAndKeyboardInput.cpp  GLFWMouseAndKeyboardInput.h  Input.cpp  Input.h  InputCodes.h
AEngine/src/AEngine/render/: RenderEngine.h
AEngine/src/AEngine/util/: BufferTools.h  Destroyable.h
AEngine/src/AEngine/window/: GLFWWindowManager.cpp  Window.h
TestBox/: TestBox.vcxproj  imgui.ini
TestBox/src/: TestBox.cpp
bin-int/Debug-windows-x86_64/AEngine/: AEngine.dll.recipe  vc142.idb  vc143.idb
bin-int/Debug-windows-x86_64/AEngine/AEngine.tlog/: AEngine.lastbuildstate  AEngine.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.25092.delete.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
bin-int/Debug-windows-x86_64/TestBox/: TestBox.exe.recipe  TestBox.ilk  vc142.idb  vc143.idb
bin-int/Debug-windows-x86_64/TestBox/TestBox.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TestBox.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
res/cursors/1828348-selection-and-cursors/eps/: 001-add selection.eps  002-box.eps  003-circle.eps  004-cursor.eps  005-delete.eps  006-double click.eps  007-expand.eps  008-finger.eps  009-focus.eps  010-hand.eps  011-hand.eps  012-hand.eps  013-hold.eps  014-hourglass.eps  015-load.eps  016-move.eps  017-move.eps  018-move.eps  019-move.eps  020-release.eps  021-remove selection.eps  022-right.eps  023-rounded.eps  024-selection.eps  025-selection.eps  026-single.eps  027-hand.eps  028-hand.eps  029-square.eps  030-square.eps  031-target.eps  032-text.eps  033-text.eps  034-text.eps  035-top.eps  036-waiting.eps  037-selection.eps
res/cursors/1828348-selection-and-cursors/font/: Flaticon.eot  _flaticon.scss  flaticon.css  flaticon.html
res/cursors/1828348-selection-and-cursors/license/: license.html
res/cursors/1828348-selection-and-cursors/psd/: 001-add selection.psd  002-box.psd  003-circle.psd  004-cursor.psd  005-delete.psd  006-double click.psd  007-expand.psd  008-finger.psd  009-focus.psd  010-hand.psd  011-hand.psd  012-hand.psd  013-hold.psd  014-hourglass.psd  015-load.psd  016-move.psd  017-move.psd  018-move.psd  019-move.psd  020-release.psd  021-remove selection.psd  022-right.psd  023-rounded.psd  024-selection.psd  025-selection.psd  026-single.psd  027-hand.psd  028-hand.psd  029-square.psd  030-square.psd  031-target.psd  032-text.psd  033-text.psd  034-text.psd  035-top.psd  036-waiting.psd  037-selection.psd
res/cursors/2087809-selection-and-cursors/eps/: 001-cursor.eps  002-cursor.eps  003-click.eps  004-app.eps  005-cursor.eps  006-cursor.eps  007-delete.eps  008-brightness.eps  009-brightness.eps  010-upload.eps  011-command.eps  012-cursor.eps  013-cursor.eps  014-enter.eps  015-scroll.eps  016-scroll.eps  017-cursor.eps  018-cursor.eps  019-cursor.eps  020-menu.eps  021-keys.eps  022-move.eps  023-move.eps  024-menu.eps  025-option.eps  026-cursor.eps  027-cursor.eps  028-cursor.eps  029-cursor.eps  030-shift.eps  031-desk.eps  032-sleep.eps  033-wait.eps  034-tab.eps  035-cursor.eps  036-text box.eps  037-text field.eps  038-add.eps  039-type.eps  040-scroll.eps  (+3 more)
res/cursors/2087809-selection-and-cursors/font/: flaticon.css
res/cursors/2087809-selection-and-cursors/license/: license.html
res/cursors/2087809-selection-and-cursors/psd/: 001-cursor.psd  002-cursor.psd  003-click.psd  004-app.psd  005-cursor.psd  006-cursor.psd  007-delete.psd  008-brightness.psd  009-brightness.psd  010-upload.psd  011-command.psd  012-cursor.psd  013-cursor.psd  014-enter.psd  015-scroll.psd  016-scroll.psd  017-cursor.psd  018-cursor.psd  019-cursor.psd  020-menu.psd  021-keys.psd  022-move.psd  023-move.psd  024-menu.psd  025-option.psd  026-cursor.psd  027-cursor.psd  028-cursor.psd  029-cursor.psd  030-shift.psd  031-desk.psd  033-wait.psd  (+11 more)
(+154 files in other folders)
